# tailstale-hap

./: .gitignore  README.md  build-profile.json5  oh-package.json5  sign.sh
AppScope/: app.json5
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/pages/: Index.ets  SshPage.ets
entry/src/main/ets/vpn/: NativeBridge.ts  TunnelService.ets  VpnExtAbility.ets  types.ts
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
headscale/: Index.ets  oh-package.json5
headscale/src/main/: module.json5
headscale/src/main/ets/: HeadscaleClient.ts  types.ts
headscale/src/main/resources/base/element/: string.json
hvigor/: hvigor-config.json5
native/: Cargo.toml  build.sh  napi-register.sh
native/.cargo/: config.toml
native/src/: config.rs  error.rs  lib.rs  loop.rs  napi_bridge.c  wireguard.rs
scripts/: setup-cachyos.sh
signing/: all.pem  all_certs.pem  app_chain.cer  app_dev.cer  app_key.pem  app_leaf.cer  ca.pem  ca_certs.pem  debug-profile-template.json  debug.p7b  root.pem
ssh/: Index.ets  oh-package.json5
ssh/src/main/: module.json5
ssh/src/main/ets/: SshTerminal.ets
